@@ -1,3 +1,7 @@
+2004-09-17  Synge Todo <wistaria@comp-phys.org>
+
+	* Removed unused parameter from generate_loops.
+	
 2004-09-14  Synge Todo <wistaria@comp-phys.org>
 
         * version 3.1b2
